Update index.html en el pie de pagina.

--- a/index.html
+++ b/index.html
@@ -1035,8 +1035,10 @@
                 </div>
             </div>
             <div style="text-align: center; margin-top: 2rem; padding-top: 2rem; border-top: 1px solid rgba(255,255,255,0.2);">
-                <p>&copy; 2025 Cristian David Peñaloza Barón - Asesor Jurídico. Todos los derechos reservados.</p>
-            </div>
+               <p style="font-size: 0.9rem; text-align: center; margin-top: 2rem; color: #6C757D;">
+                    © Cristian David Peñaloza Barón – Este sitio está protegido por una licencia <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.es" target="_blank" style="color: inherit; text-decoration: underline;">CC BY-NC-ND 4.0</a>.
+                </p>
+                </div>
         </div>
     </footer>
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
