Update index.html  en el apartado de experiencias significativas

--- a/index.html
+++ b/index.html
@@ -760,8 +760,16 @@
         <section id="case-study">
             <div class="container">
                 <div class="case-study">
-                    <h3>🏆 Algunos Casos </h3>
-                    <p>Un ciudadano pensionado fue vinculado a un crédito con seguros que nunca autorizó. Aunque creyó saldada su deuda, continuaron los cobros y descuentos injustificados. Intervine mediante un <strong>derecho de petición estructurado estratégicamente</strong>, demostrando posibles vulneraciones a derechos fundamentales como el mínimo vital y la seguridad jurídica. Este caso evidenció cómo una acción jurídica bien planteada puede evitar el desgaste de un litigio.</p>
+                    <h3>🏆 Sobre uno de los Casos </h3>
+                    <p>Una de las experiencias más significativas en mi trayectoria fue acompañar jurídicamente a una madre cuyo hijo, diagnosticado con autismo, tenía negado el acceso a terapias especializadas por parte de su EPS, a pesar de la urgencia clínica y la evidencia médica.
+
+En medio del panorama crítico que atraviesa el sistema de salud colombiano, esta situación era más que un trámite: era una vulneración directa al derecho fundamental a la salud, especialmente cuando se trata de un niño en condición de discapacidad.
+
+Analicé el caso desde una perspectiva constitucional, elaboré un derecho de petición claro y contundente, y acompañé cada paso del proceso. Finalmente, logramos que se garantizaran las terapias, los exámenes y la atención que el menor requería con urgencia.
+
+Este caso refleja la esencia de mi trabajo: actuar con estrategia, empatía y enfoque preventivo para proteger los derechos cuando más se necesitan.
+
+</p>
                 </div>
             </div>
         </section>
