Update index.html cambie el titulo de casos destacado a experiencias significativas

--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
         <section id="case-study">
             <div class="container">
                 <div class="case-study">
-                    <h3>🏆 Sobre uno de los Casos </h3>
+                    <h3>🏆 Experiencias significativas </h3>
                     <p>Una de las experiencias más significativas en mi trayectoria fue acompañar jurídicamente a una madre cuyo hijo, diagnosticado con autismo, tenía negado el acceso a terapias especializadas por parte de su EPS, a pesar de la urgencia clínica y la evidencia médica.
 
 En medio del panorama crítico que atraviesa el sistema de salud colombiano, esta situación era más que un trámite: era una vulneración directa al derecho fundamental a la salud, especialmente cuando se trata de un niño en condición de discapacidad.
